tools/tests/errors/chained_assignment.ki
var a = 0
var b = 0
a = b = 5
